<resources>
    <string name="app_name">SpaceX Fan</string>
    <string name="favourites">Favourites</string>
    <string name="upcoming_launches">Upcoming Launches</string>
    <string name="rockets">Rockets</string>
    <string name="spacex_fan">SpaceX Fan</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="favourites_rockets">Favourites Rockets</string>
    <string name="rocket_list">Rocket List</string>
    <string name="not_found">Not Found !</string>
    <string name="empty_favourite_list">Empty Favourite List</string>
    <string name="rocket">Rocket</string>
    <string name="diameter">Diameter :</string>
    <string name="mass">Mass :</string>
    <string name="height">Height :</string>
    <string name="size">Size</string>
    <string name="success_rate">Success Rate :</string>
    <string name="cost_per_launch">Cost / Launch :</string>
    <string name="active">Active :</string>
    <string name="first_flight">First Flight :</string>
    <string name="company">Company :</string>
    <string name="type">Type :</string>
    <string name="name">Name :</string>
    <string name="general">General</string>
    <string name="about_text">Not Found …</string>
    <string name="about">About</string>
    <string name="rocket_image">Rocket Image</string>
    <string name="november_10">November 10</string>
    <string name="wikipedia_icon">Wikipedia Icon</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="details">Details…</string>
    <string name="loading">Loading</string>
    <string name="falcon_9">Falcon 9</string>
    <string name="merlin">Merlin</string>
    <string name="spacex">SpaceX</string>
    <string name="_10_10_2000">10.10.2000</string>
    <string name="yes">Yes</string>
    <string name="_9000000">$ 9000000</string>
    <string name="_90">% 90</string>
    <string name="detail_height_meters">1700 m</string>
    <string name="detail_diameter_meters">3.8 m</string>
    <string name="_25000_kg">25000 kg</string>
    <string name="fire_date">Fire Date :</string>
    <string name="flight_number">Flight Number :</string>
    <string name="flight_name">Flight Name :</string>
    <string name="_133">133</string>
    <string name="launch">Launch</string>
    <string name="upcoming_detail_image">Upcoming Detail Image</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="login">Login</string>
    <string name="register_logo">Register Logo</string>
    <string name="name_register">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="please_accept">Please accept&#160;</string>
    <string name="user_agreement">User Agreement.</string>
    <string name="email_validation">^[_A-Za-z0-9-]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="valid_password"><![CDATA[^(?=.*[0-9])(?=.*[A-Z])(?=.*[.!?@*_+,$#&=\'])(?=\\S+$).{4,}$]]></string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="login_logo">Login Logo</string>
    <string name="favourite">Favourite</string>
    <string name="links">Links</string>
    <string name="upcoming">Upcoming</string>

</resources>