<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detail.RocketDetail">

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="3dp"
        android:layout_gravity="top"
        app:autoWidthFixing="true"
        app:bottomShadowAlpha="0.6"
        app:carouselBackground="#FFF"
        app:carouselType="SHOWCASE"
        app:imagePlaceholder="@drawable/ic_favourite_black"
        app:imageScaleType="fitCenter"
        app:nextButtonId="@id/btn_next"
        app:nextButtonLayout="@layout/next_button_layout"
        app:nextButtonMargin="4dp"
        app:previousButtonId="@id/btn_previous"
        app:previousButtonLayout="@layout/previous_button_layout"
        app:previousButtonMargin="4dp"
        app:scaleOnScroll="false"
        app:showBottomShadow="true"
        app:showCaption="true"
        app:showIndicator="true"
        app:showNavigationButtons="true"
        app:showTopShadow="true"
        app:topShadowAlpha="0.6" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/carousel"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:elevation="12dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:alpha="0.3"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/about_text"
                        android:textSize="17sp"
                        />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:elevation="12dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:alpha="0.3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/falcon_9"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/merlin"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spacex"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_flight"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_first_flight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_10_2000"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_per_launch"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_9000000"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/success_rate"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_success"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_90"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:elevation="12dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:alpha="0.3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_height_meters"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diameter"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_diameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_diameter_meters"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mass"
                        android:textSize="18sp"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/detail_mass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25000_kg"
                        android:textSize="18sp"
                        android:layout_weight="0.6"
                        />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>