<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="14dp"
        card_view:cardElevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <FrameLayout
                android:id="@+id/mediaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="1dp">

                <ImageView
                    android:id="@+id/media_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rocket_placeholder"
                    android:contentDescription="@string/rocket_image"
                    android:scaleType="centerInside" />

            </FrameLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mediaLayout"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="10dp"
                android:text="@string/november_10" />

            <ImageView
                android:id="@+id/go_wikipedia"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_below="@id/mediaLayout"
                android:layout_toStartOf="@id/favourite_button"
                android:contentDescription="@string/wikipedia_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/wikipedia" />

            <ImageView
                android:id="@+id/favourite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/favourite"
                android:layout_below="@id/mediaLayout"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@drawable/dr_favourite_button" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/go_wikipedia"
                android:alpha="0.5"
                android:background="@color/black" />

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rocket"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/title"
                    android:text="@string/spacex"
                    android:textSize="12sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/supporting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_margin="16dp"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
                android:textColor="#DE000000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/supporting_text">

                <TextView
                    android:id="@+id/go_detail_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/details"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>