<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.tabs.FavouriteRocketsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favourite_rockets_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp" />

        <RelativeLayout
            android:id="@+id/no_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/iv_no_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/not_found" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_no_favourite"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:text="@string/empty_favourite_list"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/loading_favourite"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/loading"
            android:visibility="visible" />

    </RelativeLayout>
</layout>