<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            card_view:cardCornerRadius="14dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">

                <ImageView
                    android:id="@+id/media_image_launch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="1dp"
                    android:background="@drawable/rocket_placeholder"
                    android:contentDescription="@string/rocket_image"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/date_launch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/media_image_launch"
                    android:layout_marginStart="25dp"
                    android:text="@string/november_10" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/date_launch"
                    android:layout_marginTop="5dp"
                    android:alpha="0.5"
                    android:background="@color/black" />

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line">

                    <TextView
                        android:id="@+id/title_launch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/launch"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/go_wikipedia_launch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/line"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/wikipedia_icon"
                    android:elevation="20dp"
                    android:outlineProvider="paddedBounds"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wikipedia" />


                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
                    android:layout_margin="16dp"
                    android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
                    android:textColor="#DE000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/details">

                    <TextView
                        android:id="@+id/go_detail_page_launch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:paddingHorizontal="20dp"
                        android:text="@string/details"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>